[workspace]

members = [
	"cli",
	"core",
	"keeby",
	"logger",
	"node",
]

exclude = [
]

resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["Kristian Quirapas <kristian@keeby.xyz>"]
repository = "https://github.com/kquirapas/keeby-network"
homepage = "https://www.keeby.xyz/"
license = "Apache-2.0"
edition = "2021"

[workspace.dependencies]
anyhow = "1.0.93"
async-trait = "0.1.83"
clap = { version = "4.5.21", features = ["derive"] }
jsonrpsee = { version = "0.24.7", features = ["full"] }
thiserror = "2.0.3"
tokio = { version = "1.42.0", features = ["rt", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["std", "env-filter"] }

keeby = { version = "=0.1.0", path = "keeby" }
keeby-cli = { version = "=0.1.0", path = "cli" }
keeby-core= { version = "=0.1.0", path = "core" }
keeby-logger= { version = "=0.1.0", path = "logger" }
keeby-node= { version = "=0.1.0", path = "node" }
